# mastering-fastapi

./: .gitignore  pyproject.toml
requirements/: dev.txt  production.txt
storeapi/: config.py  database.py  logging_conf.py  main.py  security.py  tasks.py
storeapi/libs/b2/: __init__.py
storeapi/models/: posts.py  users.py
storeapi/routers/: __upload.py  post.py  upload.py  user.py
tests/: conftest.py  helpers.py  test_security.py  test_task.py
tests/routers/: test_post.py  test_upload.py  test_user.py
