[tool.poetry]
name = "mastering-fastapi"
version = "0.1.0"
description = ""
authors = ["Simone Dalla <simodalla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
devtools = "^0.12.2"
pytest = "^8.0.1"
ruff = "^0.2.2"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
httpx = "^0.27.0"
databases = {extras = ["aiosqlite"], version = "^0.8.0"}
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
asgi-correlation-id = "^4.3.1"
python-json-logger = "^2.0.7"
logtail-python = "^0.2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

exclude = [
  ".git",
  ".mypy_cache",
  ".pre-commit-cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "venv",
  "docs",
  "__pycache",
  "**/migrations/*",
]
target-version = "py312"


[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'T', "E501"]
ignore = ["G004"] #["B008", "SIM102"]
unfixable = ["G004", "F401"]
mccabe = { max-complexity = 14 }

[tool.ruff.lint.isort]
known-first-party = ["storeapi"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder"]

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning" #-p no:warnings 

[tool.coverage.run]
branch = true
omit = ["tests/*"]
